importing json files and added pagination to controllers RIT-4
